# monika

./: .env.example  .env.production  .gitattributes  .gitignore  .pids  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  Makefile  README.dev.md  README.md  README.zh.md  Taskfile.yml  a.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  go.work  main.go  main.py  nginx.conf  package-lock.json  preview.html  pyproject.toml  start-dev.sh  stop-dev.sh  tmp-graph-demo.txt  todo.txt
backend/: .env.example  .env.test  Dockerfile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt  verify_structure.py
backend/alembic/: env.py
backend/alembic/versions/: 002_create_characters_table.py  008_extend_events_for_m3_memory.py  010_add_event_types_table.py  011_extend_checkpoints_for_m3.py  012_extend_events_with_m3_fields.py  26e5b771d11c_create_rules_tables.py  26e5b771d11c_create_rules_tables.py.bak
backend/api/: __init__.py  auth.py  characters.py  dependencies.py
backend/core/: config.py  database.py  security.py
backend/data/: occupations.json  skills.json
backend/models/: character.py  user.py
backend/schemas/: character.py  user.py
backend/scripts/: manage_skills.py
backend/src/: main.py
backend/src/api/: auth.py  campaigns.py  characters.py  chase.py  checkpoints.py  combat.py  combat_extended.py  events.py  game.py  growth.py  item.py  leads.py  madness.py  messages.py  occupations.py  queue.py  rules.py  san.py  scripts.py  search.py  sessions.py  skills.py  spotlight.py  summaries.py  websocket.py
backend/src/core/: auth.py  config.py  database.py  security.py
backend/src/data/: seed_rules.json
backend/src/models/: __init__.py  campaign.py  character.py  chase.py  checkpoint.py  combat.py  event.py  event_type_metadata.py  item.py  lead.py  madness.py  message.py  occupation.py  rule.py  san.py  script.py  session.py  skill.py  summary.py  user.py
backend/src/schemas/: __init__.py  campaign.py  character.py  growth.py  item.py  llm_response.py  madness.py  output_config.py  rule.py  san.py  script.py  search.py  skill.py  state_snapshot.py  summary.py  user.py
backend/src/scripts/: import_seed_rules.py
backend/src/services/: campaign.py  character_generator.py  chase.py  combat.py  combat_extended.py  dice.py  disconnect_recovery.py  embedding.py  event_writer.py  events.py  growth.py  invitation.py  item.py  key_event_extraction.py  leads.py  madness.py  message_queue.py  output_formatter.py  presence.py  prompt.py  rule_search.py  (+18 more)
backend/tests/: conftest.py  test_auth.py  test_auth_debug.py  test_auth_simple.py  test_config.py  test_database.py  test_dependencies.py  test_security.py  test_table_creation.py  test_user_migration.py  test_user_model.py
(+1528 files in other folders)
